--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "async-handler": "^0.0.3",
+    "basic-auth": "^2.0.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "promise.prototype.finally": "^3.1.2",
     "sequelize": "^6.37.2",
